Right-clicking on Sidebar > Dimensions controls spawn an empty menu #69097

Closed
opened 2019-08-23 18:49:14 +02:00 by Gaia Clary · 5 comments
Member

System Information
Operating system: Windows 10
Graphics card: nvidia

Blender Version
Broken: (example: 2.81 master)
Worked:

Exact steps for others to reproduce the error

  • open Blender
  • Select the cube in object mode
  • open the N Panel (locate item -> Transform)
  • RMB on one of the Dimension fields

An empty popup window appears:

dimensions.png

**System Information** Operating system: Windows 10 Graphics card: nvidia **Blender Version** Broken: (example: 2.81 master) Worked: **Exact steps for others to reproduce the error** - open Blender - Select the cube in object mode - open the N Panel (locate item -> Transform) - RMB on one of the Dimension fields An empty popup window appears: ![dimensions.png](https://archive.blender.org/developer/F7695033/dimensions.png)
Author
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary
William Reynish was assigned by Gaia Clary 2019-08-23 18:53:58 +02:00
William Reynish removed their assignment 2019-08-23 18:57:12 +02:00
Campbell Barton was assigned by William Reynish 2019-08-23 18:57:12 +02:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

feel free to re-assign

feel free to re-assign
William Reynish changed title from RMB Popup menu for N-Panel -> Transform Dimensions is empty to Right-clicking on Sidebar > Dimensions controls spawn an empty menu 2019-08-23 18:58:15 +02:00

This issue was referenced by c8b293ec05

This issue was referenced by c8b293ec057ea9e8fb445ba103cf973cbd03c9f0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69097
No description provided.