Fix T69097: Empty context menu for dimensions

Adjust empty menu check to skip the menu title.